change links to github projects

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                 </ul>
                 <div class="workLinks">
                   <a href="https://marekrosenkranz.com/" class="liveLink" target="_blank" >Odkaz na web</a>
-                  <a href="https://github.com/RejhyT/https-marekrosenkranz.com---fotoweb/tree/master" class="liveLink" target="_blank" >GitHub</a>
+                  <a href="https://github.com/tomasrejhon/https-marekrosenkranz.com---fotoweb" class="liveLink" target="_blank" >GitHub</a>
                 </div>
               </div>
             </article>
@@ -487,7 +487,7 @@
                 </ul>
                 <div class="workLinks">
                   <a href="https://tomasrejhon.cz/" class="liveLink" target="_blank" >Odkaz na web</a>
-                  <a href="https://github.com/RejhyT/https-marekrosenkranz.com---fotoweb/tree/master" class="liveLink" target="_blank" >GitHub</a>
+                  <a href="https://github.com/tomasrejhon/Moje-prenzencni-stranka" class="liveLink" target="_blank" >GitHub</a>
                 </div>
               </div>
             </article>
